--- a/templates/borrowed-books.html
+++ b/templates/borrowed-books.html
@@ -42,7 +42,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title">Extend Return Date</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <button type="button" class="close" onclick="$('#extendModal').modal('hide')" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
@@ -57,7 +57,7 @@
                 <p id="extendedReturnDateText" class="mt-3 text-muted"></p>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-secondary" onclick="$('#extendModal').modal('hide')">Close</button>
                 <button type="button" class="btn btn-primary" onclick="extendDate()">Extend</button>
             </div>
         </div>
@@ -70,7 +70,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title">Thank You!</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <button type="button" class="close" onclick="$('#confirmationModal').modal('hide')" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
@@ -79,7 +79,7 @@
                 <p>Please return these books by: <strong id="finalReturnDate"></strong>.</p>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary" onclick="$('#confirmationModal').modal('hide')">Close</button>
             </div>
         </div>
     </div>
@@ -214,7 +214,7 @@
     }
 </script>
 
-<!-- Include Bootstrap and jQuery -->
+<!-- Bootstrap and jQuery -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
