fixed update/delete+hard coded hiding

--- a/templates/includes/_navbar.html
+++ b/templates/includes/_navbar.html
@@ -38,11 +38,12 @@
                     <a class="nav-link {% if request.path == '/admin' %}active text-warning{% else %}text-light{% endif %}" href="/admin">ADMIN</a>
                 </li>
                 <!-- Check if the user is logged in -->
-
+                {% if is_admin %}
                 <!-- Contact_Admin -->
                 <li class="nav-item">
                     <a class="nav-link {% if request.path == '/admin/contacts' %}active text-warning{% else %}text-light{% endif %}" href="/admin/contacts">SUBMISSIONS</a>
                 </li>
+                {% endif %}
             </ul>
             <div class="text-light">
             <!-- Check if the user is logged in -->
