--- a/templates/sign_up.html
+++ b/templates/sign_up.html
@@ -144,7 +144,7 @@ Sign_up
                     <label for="confirm_password">Confirm Password:</label>
                     <input type="password" id="confirm_password" name="confirm_password" required>
                 </div>
-                <button type="submit">Register</button>
+                <button type="submit">Sign Up</button>
             </form>
             <p><a href="/login">Back to Login</a></p>
         </div>
