--- a/templates/book_loan.html
+++ b/templates/book_loan.html
@@ -183,7 +183,7 @@
 </script>
 
 <style>
-/* Gradient background applied */
+/* Gradient background */
 body {
     background: white;
     color: black;
