--- a/templates/bookstore.html
+++ b/templates/bookstore.html
@@ -26,7 +26,7 @@
 
         <!-- Return Button -->
         <div class="text-center">
-            <a href="/book_loan" class="return-btn btn btn-primary mt-3">Return to Book Loan Page</a>
+            <a href="/book-loan" class="return-btn btn btn-primary mt-3">Return to Book Loan Page</a>
         </div>
     </div>
 </div>
