--- a/templates/book_loanv2.html
+++ b/templates/book_loanv2.html
@@ -18,39 +18,35 @@
 
     <!-- Add Book Form -->
     <div class="form-container">
-    <h2>Add New Book</h2>
-    <form method="POST" enctype="multipart/form-data">
-        <input type="hidden" name="addBook">
-        <div class="form-group">
-            <label for="title">Title:</label>
-            <input type="text" name="title" id="title" required>
-        </div>
-        <div class="form-group">
-            <label for="author">Author:</label>
-            <input type="text" name="author" id="author" required>
-        </div>
-        <div class="form-group">
-            <label for="isbn">ISBN:</label>
-            <input type="number" name="isbn" id="isbn" required>
-        </div>
-        <div class="form-group">
-            <label for="category">Category:</label>
-            <input type="text" name="category" id="category" required>
-        </div>
-        <div class="form-group">
-            <label for="description">Description:</label>
-            <textarea name="description" id="description" required></textarea>
-        </div>
-        <div class="form-group">
-            <label for="copies">Copies:</label>
-            <input type="number" name="copies" id="copies" required>
-        </div>
-        <div class="form-group">
-            <label for="image">Upload Image:</label>
-            <input type="file" name="image" id="image">
-        </div>
-        <button type="submit" class="btn btn-submit">Add Book</button>
-    </form>
+        <h2>Add New Book</h2>
+        <form method="POST">
+            <input type="hidden" name="addBook">
+            <div class="form-group">
+                <label for="title">Title:</label>
+                <input type="text" name="title" id="title" required>
+            </div>
+            <div class="form-group">
+                <label for="author">Author:</label>
+                <input type="text" name="author" id="author" required>
+            </div>
+            <div class="form-group">
+                <label for="isbn">ISBN:</label>
+                <input type="text" name="isbn" id="isbn" required>
+            </div>
+            <div class="form-group">
+                <label for="category">Category:</label>
+                <input type="text" name="category" id="category" required>
+            </div>
+            <div class="form-group">
+                <label for="description">Description:</label>
+                <textarea name="description" id="description" required></textarea>
+            </div>
+            <div class="form-group">
+                <label for="copies">Copies:</label>
+                <input type="number" name="copies" id="copies" required>
+            </div>
+            <button type="submit" class="btn btn-submit">Add Book</button>
+        </form>
     </div>
 
     <!-- List of Books -->
@@ -66,7 +62,6 @@
                     <th>Category</th>
                     <th>Description</th>
                     <th>Copies</th>
-                    <th>Image</th>
                     <th>Actions</th>
                 </tr>
             </thead>
@@ -79,13 +74,6 @@
                     <td>{{ book['category'] }}</td>
                     <td>{{ book['description'] }}</td>
                     <td>{{ book['copies'] }}</td>
-                    <td>
-                    {% if book['image'] %}
-                    <img src="{{ url_for('static', filename='uploads/' + book['image']) }}" alt="{{ book['title'] }}" style="width: 100px;">
-                    {% else %}
-                    No Image
-                    {% endif %}
-                    </td>
                     <td>
                         <button type="button" class="btn btn-update" data-isbn="{{ book['isbn'] }}"
                                 onclick="openUpdateModal('{{ book['isbn'] }}', '{{ book['title'] }}', '{{ book['author'] }}', '{{ book['category'] }}', '{{ book['description'] }}', '{{ book['copies'] }}')">Update
@@ -107,7 +95,7 @@
     <div class="modal-content">
         <span class="close" onclick="closeUpdateModal()">&times;</span>
         <h2>Update Book</h2>
-        <form id="updateBookForm" action="" method="POST" enctype="multipart/form-data">
+        <form id="updateBookForm" action="" method="POST">
             <input type="hidden" name="updateBook" id="updateBook">
             <div class="form-group">
                 <label for="updateTitle">Title:</label>
@@ -130,10 +118,6 @@
                 <input type="number" name="copies" id="updateCopies" required>
                 <span id="copiesWarning" style="color: red; display: none;">Invalid amount of copies.</span>
                 <span id="Warning" style="color: red; display: none;">Number of copies must be a whole number.</span>
-            </div>
-            <div class="form-group">
-                <label for="updateImage">Upload Image:</label>
-                <input type="file" name="image" id="updateImage">
             </div>
             <button type="submit" class="btn btn-submit">Update Book</button>
         </form>
