--- a/templates/bookstore_management.html
+++ b/templates/bookstore_management.html
@@ -166,8 +166,8 @@ document.getElementById("updatebsBookForm").addEventListener("submit", function(
     }
 });
 
-document.getElementById("updateCopies").addEventListener("input", function() {
-    var stockInput = document.getElementById("updateCopies");
+document.getElementById("updateStock").addEventListener("input", function() {
+    var stockInput = document.getElementById("updateStock");
     var stockWarning = document.getElementById("stockWarning");
 
     if (stockInput.value < 0) {
