--- a/templates/reset_password.html
+++ b/templates/reset_password.html
@@ -8,9 +8,79 @@ Reset_password
 <html lang="en">
 <head>
     <title>Reset Password</title>
+    <style>
+                body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f9;
+            margin: 0;
+            padding: 0;
+            background: url('https://www.shutterstock.com/image-vector/bookstore-aisle-interior-shelf-cartoon-600nw-2288135719.jpg') no-repeat;
+            background-size: cover;
+            background-position: center;
+        }
+
+        .container {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+        }
+
+        h1 {
+            text-align: center;
+            font-weight: bold;
+            color: #333;
+            margin-bottom: 20px;
+        }
+
+        form {
+            background-color: #fff;
+            padding: 25px 30px 15px 30px;
+            border-radius: 8px;
+            box-shadow: 10px 10px 15px rgba(0, 0, 1, 0.5);
+            width: 500px;
+        }
+        label {
+            margin-bottom: 5px;
+            color: #555;
+            font-weight: 600;
+        }
+
+        input {
+            width: 100%;
+            padding: 10px;
+            border: 2px solid #ddd;
+            border-radius: 10px;
+            font-size: 16px;
+            margin-bottom: 10px;
+        }
+
+        input:focus {
+            border-color: #007bff;
+            outline: none;
+            box-shadow: 0 0 5px rgba(0, 123, 255, 0.5);
+        }
+
+        button[type="submit"] {
+            width: 100%;
+            padding: 10px;
+            background-color: #007bff;
+            color: white;
+            border: none;
+            border-radius: 10px;
+            font-size: 16px;
+            cursor: pointer;
+        }
+
+        button[type="submit"]:hover {
+            background-color: #0056b3;
+        }
+    </style>
 </head>
 <body>
-    <h1>Reset Password for {{ username }}</h1>
+<div class="container">
+    <div>
+    <h1>Reset Password for<br>{{ username }}</h1>
     <form method="POST">
         <label for="password">New Password:</label>
         <input type="password" id="password" name="password" required>
@@ -20,15 +90,8 @@ Reset_password
         <br>
         <button type="submit">Reset Password</button>
     </form>
-    {% with messages = get_flashed_messages(with_categories=true) %}
-        {% if messages %}
-            <ul>
-            {% for category, message in messages %}
-                <li class="{{ category }}">{{ message }}</li>
-            {% endfor %}
-            </ul>
-        {% endif %}
-    {% endwith %}
+        </div>
+    </div>
 </body>
 </html>
 {% endblock %}
